Fix middleware
